# PrA

./: CMakeLists.txt  README.md  main.cpp
testTask/: CMakeLists.txt
